force-app/main/default/objects/Warehouse__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Enter the complete address of the warehouse for delivery and logistics.</inlineHelpText>
    <label>Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>