force-app/main/default/objects/Warehouse__c/fields/Current_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy__c</fullName>
    <inlineHelpText>This field shows the current occupancy level of the warehouse based on inventory quantities.</inlineHelpText>
    <label>Current Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>