force-app/main/default/objects/Warehouse__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <displayFormat>LOC-{000}</displayFormat>
    <inlineHelpText>This code is automatically generated to uniquely identify the warehouse.</inlineHelpText>
    <label>Location Code</label>
    <type>AutoNumber</type>
</CustomField>