force-app/main/default/objects/Warehouse__c/fields/Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Name__c</fullName>
    <description>This field captures the name of the warehouse.</description>
    <inlineHelpText>Enter the name of the warehouse for identification.</inlineHelpText>
    <label>Warehouse Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>